preserve descriptions next to the $ref some code cleanup